In Progress - Government 360 - Plumbing Permit

--- a/displaytabs/tabs/GovernmentUI/RealEstateElectricalPermitProfileBox1.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstateElectricalPermitProfileBox1.html
@@ -74,41 +74,41 @@
                         <div class="form-group" style="flex: 30%; margin-left: 15px;">
                             <div style="display: flex; margin: 5px;">
                                 <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
-                                name="locationOfConstructionAddress"> New Installation
+                                name="scopeOfWorkNew"> New Installation
                             </div>
                             <div style="display: flex; margin: 5px;">
                                 <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
-                                name="locationOfConstructionAddress"> Annual Inspection
+                                name="scopeOfWorkAnnualInspection"> Annual Inspection
                             </div>
                             <div style="display: flex; margin: 5px;">
                                 <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
-                                name="locationOfConstructionAddress"> Temporary
-                            </div>
-                        </div>
-                        <div class="form-group" style="flex: 30%; margin-left: 15px;">
-                            <div style="display: flex; margin: 5px;">
-                                <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
-                                name="locationOfConstructionAddress"> Reconnection of Service Entrance
-                            </div>
-                            <div style="display: flex; margin: 5px;">
-                                <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
-                                name="locationOfConstructionAddress"> Separation of Service Entrance
-                            </div>
-                            <div style="display: flex; margin: 5px;">
-                                <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
-                                name="locationOfConstructionAddress"> Upgrading of Service Entrance
+                                name="scopeOfWorkTemporary"> Temporary
                             </div>
                         </div>
                         <div class="form-group" style="flex: 30%; margin-left: 15px;">
                             <div style="display: flex; margin: 5px;">
                                 <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
-                                name="locationOfConstructionAddress"> Relocation of Service Entrance
+                                name="scopeOfWorkReconnection"> Reconnection of Service Entrance
                             </div>
                             <div style="display: flex; margin: 5px;">
                                 <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
-                                name="locationOfConstructionAddress"> Others
+                                name="scopeOfWorkSeparation"> Separation of Service Entrance
+                            </div>
+                            <div style="display: flex; margin: 5px;">
+                                <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                                name="scopeOfWorkUpgrading"> Upgrading of Service Entrance
+                            </div>
+                        </div>
+                        <div class="form-group" style="flex: 30%; margin-left: 15px;">
+                            <div style="display: flex; margin: 5px;">
+                                <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                                name="scopeOfWorkRelocation"> Relocation of Service Entrance
+                            </div>
+                            <div style="display: flex; margin: 5px;">
+                                <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                                name="scopeOfWorkOthers"> Others
                                 <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control editRealEstateElectricalPermit" module="RealEstateElectricalPermitUI" 
-                                name="locationOfConstructionAddress">
+                                name="scopeOfWorkOthers">
                             </div>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                             <label>Total Connected Load</label>
                             <div style="display: flex;">
                                 <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount">
+                                name="totalConnectedLoad">
                                 <label style="margin-left: 15px;">kVA</label>
                             </div>
                         </div>
@@ -134,7 +134,7 @@
                             <label>Total Transformer Capacity</label>
                             <div style="display: flex;">
                                 <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount">
+                                name="totalTransformerCapacity">
                                 <label style="margin-left: 15px;">kVA</label>
                             </div>
                         </div>
@@ -142,7 +142,7 @@
                             <label>Total Generators/UPS Capacity</label>
                             <div style="display: flex;">
                                 <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount">
+                                name="totalGeneratorCapacity">
                                 <label style="margin-left: 15px;">kVA</label>
                             </div>
                         </div>
