--- a/displaytabs/tabs/GovernmentUI/RealEstateElectricalPermitProfileBox2.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstateElectricalPermitProfileBox2.html
@@ -14,31 +14,32 @@
                     <div style="flex: 90%; margin: 5px;">
                         <label>Name</label>
                         <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount"/>
+                                name="electricalEngineerName"/>
                     </div>
                     <div style="flex: 90%; margin: 5px;">
                         <label>Address</label>
                         <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount"/>
+                                name="electricalEngineerAddress"/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>PRC #</label>
                         <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount"/>
+                                name="electricalEngineerLicense"/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>PTR #</label>
-                        <input class="form-control editRealEstateElectricalPermit"name=""/>
+                        <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                        name="electricalEngineerTIN"/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>Date Issued</label>
                         <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount"/>
+                                name="electricalEngineerDateIssued"/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>Place Issued</label>
                         <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount"/>
+                                name="electricalEngineerPlaceIssued"/>
                     </div>
                 </div>
             </div>
@@ -52,21 +53,24 @@
                     <div style="flex: 90%; margin: 5px;">
                         <label>Name</label>
                         <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount"/>
+                                name="supervisorInChargeName"/>
                     </div>
                     <div style="flex: 90%; margin: 5px;">
                         <label>Address</label>
                         <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount"/>
+                                name="supervisorInChargeAddress"/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
-                        <input type="checkbox" style="margin: 5px;"> Professional Electrical Engineer
+                        <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                        name="supervisorInChargeIsElectricalEngr"> Professional Electrical Engineer
                     </div>
                     <div style="flex: 30%; margin: 5px;">
-                        <input type="checkbox" style="margin: 5px;"> Registered Electrical Engineer
+                        <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                        name="supervisorInChargeIsRegisteredElectricalEngr"> Registered Electrical Engineer
                     </div>
                     <div style="flex: 30%; margin: 5px;">
-                        <input type="checkbox" style="margin: 5px;"> Registered Master Electrician
+                        <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                        name="supervisorInChargeIsRegisteredMasterElectrician"> Registered Master Electrician
                     </div>
                 </div>
             </div>
