--- a/displaytabs/tabs/GovernmentUI/RealEstatePlumbingPermitProfileBox2.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstatePlumbingPermitProfileBox2.html
@@ -13,46 +13,60 @@
                         <div class="form-group" style="flex: 1; margin-left: 15px;">
                             <label>Water Supply</label>
                             <div style="display: flex; margin: 5px;">
-                                <input type="checkbox" style="margin: 5px;"> Shallow Well
+                                <input type="checkbox" style="margin: 5px;" class="editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI"
+                                name="waterSupplyShallowWell"> Shallow Well
                             </div>
                             <div style="display: flex; margin: 5px;">
-                                <input type="checkbox" style="margin: 5px;"> Deep Well & Pump Set
+                                <input type="checkbox" style="margin: 5px;" class="editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI"
+                                name="waterSupplyDeepWell"> Deep Well & Pump Set
                             </div>
                             <div style="display: flex; margin: 5px;">
-                                <input type="checkbox" style="margin: 5px;"> City/Municipal System
+                                <input type="checkbox" style="margin: 5px;" class="editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI"
+                                name="waterSupplyMunicipalitySystem"> City/Municipal System
                             </div>
                             <div style="display: flex; margin: 5px;">
-                                <input type="checkbox" style="margin: 5px;"> Others&nbsp;(Specify)
-                                <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" name="assessedAmount">
+                                <input type="checkbox" style="margin: 5px;" class="editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI"
+                                name="waterSupplyOther"> Others&nbsp;(Specify)
+                                <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                name="waterSupplyOther">
                             </div>
                         </div>
                         <div class="form-group" style="flex: 2; margin-left: 15px;">
                             <label>Disposal System</label>
                             <div style="display: flex; flex-wrap: wrap;">
                                 <div style="flex: 40%; display: flex; margin: 5px;">
-                                    <input type="checkbox" style="margin: 5px;"> Waste Water Treatment Plant
+                                    <input type="checkbox" style="margin: 5px;" class="editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI"
+                                    name="disposalSystemWasteWaterTreatmentPlant"> Waste Water Treatment Plant
                                 </div>
                                 <div style="flex: 40%; display: flex; margin: 5px;">
-                                    <input type="checkbox" style="margin: 5px;"> IMHOFF Tank
+                                    <input type="checkbox" style="margin: 5px;" class="editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI"
+                                    name="disposalSystemSanitarySewerSystem"> IMHOFF Tank
                                 </div>
                                 <div style="flex: 40%; display: flex; margin: 5px;">
-                                    <input type="checkbox" style="margin: 5px;"> Sanitary Sewer Connection
+                                    <input type="checkbox" style="margin: 5px;" class="editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI"
+                                    name="disposalSystemStreetCanal"> Sanitary Sewer Connection
                                 </div>
                                 <div style="flex: 40%; display: flex; margin: 5px;">
-                                    <input type="checkbox" style="margin: 5px;"> Surface Drainage
+                                    <input type="checkbox" style="margin: 5px;" class="editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI"
+                                    name="disposalSystemSanitarySewerConnection"> Surface Drainage
                                 </div>
                                 <div style="flex: 40%; display: flex; margin: 5px;">
-                                    <input type="checkbox" style="margin: 5px;"> Street Canal
+                                    <input type="checkbox" style="margin: 5px;" class="editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI"
+                                    name="disposalSystemIMHOFFTank"> Street Canal
                                 </div>
                                 <div style="flex: 40%; display: flex; margin: 5px;">
-                                    <input type="checkbox" style="margin: 5px;"> Water Course
+                                    <input type="checkbox" style="margin: 5px;" class="editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI"
+                                    name="disposalSystemSurfaceDrainage"> Water Course
                                 </div>
                                 <div style="flex: 40%; display: flex; margin: 5px;">
-                                    <input type="checkbox" style="margin: 5px;"> Sanitary Sewer Connection
+                                    <input type="checkbox" style="margin: 5px;" class="editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI"
+                                    name="disposalSystemWaterCourse"> Sanitary Sewer Connection
                                 </div>
                                 <div style="flex: 40%; display: flex; margin: 5px;">
-                                    <input type="checkbox" style="margin: 5px;"> Others&nbsp;(Specify)
-                                    <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" name="assessedAmount">
+                                    <input type="checkbox" style="margin: 5px;" class="editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI"
+                                    name="disposalSystemOther"> Others&nbsp;(Specify)
+                                    <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="disposalSystemOther">
                                 </div>
                             </div>
                         </div>
@@ -70,60 +84,64 @@
                 <div class="box-body" style="display: flex;flex-wrap: wrap;">
                     <div style="flex: 90%; margin: 5px;">
                         <label>Name</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                        <input type="text" class="form-control editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI" 
+                                name="plumbingEngineerName"/>
                     </div>
                     <div style="flex: 90%; margin: 5px;">
                         <label>Address</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                        <input type="text" class="form-control editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI" 
+                                name="plumbingEngineerAddress"/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>PRC #</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                        <input type="text" class="form-control editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI" 
+                                name="plumbingEngineerLicense"/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>PTR #</label>
-                        <input class="form-control editRealEstatePlumbingPermit"name=""/>
+                        <input type="text" class="form-control editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI" 
+                        name="plumbingEngineerTIN"/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>Date Issued</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                        <input type="text" class="form-control editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI" 
+                                name="plumbingEngineerDateIssued"/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>Place Issued</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                        <input type="text" class="form-control editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI" 
+                                name="plumbingEngineerPlaceIssued"/>
                     </div>
                 </div>
             </div>
             <div style="flex: 45%; margin: 5px;">
                 <div class="box-header">
                     <h3 class="box-title">
-                        Supervisor / In-Charge of Sanitary Works
+                        Supervisor / In-Charge of Plumbing Works
                     </h3>
                 </div>
                 <div class="box-body" style="display: flex;flex-wrap: wrap;">
                     <div style="flex: 90%; margin: 5px;">
                         <label>Name</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                        <input type="text" class="form-control editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI" 
+                                name="supervisorInChargeName"/>
                     </div>
                     <div style="flex: 90%; margin: 5px;">
                         <label>Address</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                        <input type="text" class="form-control editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI" 
+                                name="supervisorInChargeAddress"/>
                     </div>
-                    <div style="flex: 22%; margin: 5px;">
-                        <label>PRC #</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                    <div style="flex: 30%; margin: 5px;">
+                        <input type="checkbox" style="margin: 5px;" class="editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI" 
+                        name="supervisorInChargeIsPlumbingEngr"> Professional Plumbing Engineer
                     </div>
-                    <div style="flex: 22%; margin: 5px;">
-                        <label>PTR #</label>
-                        <input class="form-control editRealEstatePlumbingPermit"name=""/>
+                    <div style="flex: 30%; margin: 5px;">
+                        <input type="checkbox" style="margin: 5px;" class="editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI" 
+                        name="supervisorInChargeIsRegisteredPlumbingEngr"> Registered Plumbing Engineer
                     </div>
-                    <div style="flex: 22%; margin: 5px;">
-                        <label>Date Issued</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
-                    </div>
-                    <div style="flex: 22%; margin: 5px;">
-                        <label>Place Issued</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                    <div style="flex: 30%; margin: 5px;">
+                        <input type="checkbox" style="margin: 5px;" class="editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI" 
+                        name="supervisorInChargeIsRegisteredMasterElectrician"> Registered Master Electrician
                     </div>
                 </div>
             </div>
