--- a/displaytabs/tabs/GovernmentUI/RealEstatePlumbingPermitProfileBox3.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstatePlumbingPermitProfileBox3.html
@@ -12,23 +12,28 @@
                 <div class="box-body" style="display: flex;flex-wrap: wrap;">
                     <div style="flex: 90%; margin: 5px;">
                         <label>Name</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                        <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="buildingOwnerName">
                     </div>
                     <div style="flex: 90%; margin: 5px;">
                         <label>Address</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                        <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="buildingOwnerAddress">
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>C.T.C. #</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                        <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="buildingOwnerCTC">
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>Date Issued</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                        <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control calendar editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="buildingOwnerCTCDateIssued">
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>Place Issued</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                        <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="buildingOwnerCTCPlaceIssued">
                     </div>
                 </div>
             </div>
@@ -40,23 +45,28 @@
                 <div class="box-body" style="display: flex;flex-wrap: wrap;">
                     <div style="flex: 90%; margin: 5px;">
                         <label>Name</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                        <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="lotOwnerName">
                     </div>
                     <div style="flex: 90%; margin: 5px;">
                         <label>Address</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                        <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="lotOwnerAddress">
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>C.T.C. #</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                        <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="lotOwnerCTC">
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>Date Issued</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                        <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control calendar editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="lotOwnerCTCDateIssued">
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>Place Issued</label>
-                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                        <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="lotOwnerCTCPlaceIssued">
                     </div>
                 </div>
             </div>
