--- a/displaytabs/tabs/GovernmentUI/RealEstatePlumbingPermitProfileBox4.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstatePlumbingPermitProfileBox4.html
@@ -7,17 +7,22 @@
             <label style="font-size: 15px;">Sanitary Documents (Five Sets Each)</label>
             <div style="display: flex; flex-wrap: wrap;">
                 <div style="flex: 45%; display: flex;">
-                    <input type="checkbox" style="margin: 5px;"> Sanitary Plan and Specifications
+                    <input type="checkbox" style="margin: 5px;" class="editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI" 
+                    name="withSanitaryPlanAndSpecs"> Sanitary Plan and Specifications
                 </div>
                 <div style="flex: 45%; display: flex;">
-                    <input type="checkbox" style="margin: 5px;"> Cost Estimates
+                    <input type="checkbox" style="margin: 5px;" class="editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI" 
+                    name="withCostEstimates"> Cost Estimates
                 </div>
                 <div style="flex: 45%; display: flex;">
-                    <input type="checkbox" style="margin: 5px;"> Bill of Materials
+                    <input type="checkbox" style="margin: 5px;" class="editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI" 
+                    name="withBillOfMaterials"> Bill of Materials
                 </div>
                 <div style="flex: 45%; display: flex;">
-                    <input type="checkbox" style="margin: 5px;"> Others&nbsp;(Specify)
-                    <input type="text" style="margin: 5px; margin-top: 0px;" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" name="assessedAmount">
+                    <input type="checkbox" style="margin: 5px;" class="editRealEstatePlumbingPermit" rowIndex="0" module="RealEstatePlumbingPermitUI" 
+                    name="withOtherDocuments"> Others&nbsp;(Specify)
+                    <input type="text" style="margin: 5px; margin-top: 0px;" rowIndex="0" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                    name="withOtherDocuments">
                 </div>
             </div>
         </div>
@@ -42,17 +47,33 @@
                     </div>
                     <div style="display: flex;">
                         <label style="flex: 2; margin: 2px;">SANITARY</label>
-                        <label class="text-center" style="flex: 1; margin: 2px;"><input class="form-control editRealEstatePlumbingPermit" name=""/></label>
-                        <label class="text-center" style="flex: 1; margin: 2px;"><input class="form-control editRealEstatePlumbingPermit" name=""/></label>
-                        <label class="text-center" style="flex: 1; margin: 2px;"><input class="form-control editRealEstatePlumbingPermit" name=""/></label>
-                        <label class="text-center" style="flex: 1; margin: 2px;"><input class="form-control editRealEstatePlumbingPermit" name=""/></label>
+                        <label class="text-center" style="flex: 1; margin: 2px;">
+                            <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="plumbingInTimeProgress"></label>
+                        <label class="text-center" style="flex: 1; margin: 2px;">
+                            <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control calendar editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="plumbingInDateProgress"></label>
+                        <label class="text-center" style="flex: 1; margin: 2px;">
+                            <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="plumbingOutTimeProgress"></label>
+                        <label class="text-center" style="flex: 1; margin: 2px;">
+                            <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control calendar editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="plumbingOutDateProgress"></label>
                     </div>
                     <div style="display: flex;">
                         <label style="flex: 2; margin: 2px;">OTHERS (Specify)</label>
-                        <label class="text-center" style="flex: 1; margin: 2px;"><input class="form-control editRealEstatePlumbingPermit" name=""/></label>
-                        <label class="text-center" style="flex: 1; margin: 2px;"><input class="form-control editRealEstatePlumbingPermit" name=""/></label>
-                        <label class="text-center" style="flex: 1; margin: 2px;"><input class="form-control editRealEstatePlumbingPermit" name=""/></label>
-                        <label class="text-center" style="flex: 1; margin: 2px;"><input class="form-control editRealEstatePlumbingPermit" name=""/></label>
+                        <label class="text-center" style="flex: 1; margin: 2px;">
+                            <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="otherInTimeProgress"></label>
+                        <label class="text-center" style="flex: 1; margin: 2px;">
+                            <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control calendar editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="otherInDateProgress"></label>
+                        <label class="text-center" style="flex: 1; margin: 2px;">
+                            <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="otherOutTimeProgress"></label>
+                        <label class="text-center" style="flex: 1; margin: 2px;">
+                            <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control calendar editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="otherOutDateProgress"></label>
                     </div>
                 </div>
                 <div style="flex: 40%; display: flex; flex-direction: column;" >
@@ -64,19 +85,23 @@
                     <div class="box-body" style="display: flex;flex-wrap: wrap;">
                         <div style="flex: 90%; margin: 5px;">
                             <label>Name</label>
-                            <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                            <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="processedByName">
                         </div>
                         <div style="flex: 90%; margin: 5px;">
                             <label>Address</label>
-                            <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                            <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="processedByAddress">
                         </div>
                         <div style="flex: 40%; margin: 5px;">
                             <label>PRC #</label>
-                            <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                            <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="processedByPRC">
                         </div>
                         <div style="flex: 40%; margin: 5px;">
                             <label>Validity Date</label>
-                            <input class="form-control editRealEstatePlumbingPermit" name=""/>
+                            <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control calendar editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" 
+                                    name="processedByPRCValidityDate">
                         </div>
                     </div>    
                 </div>
