--- a/sample.html
+++ b/sample.html
@@ -1,27 +1,19 @@
-public String architectOrCivilEngineerName;
-public String architectOrCivilEngineerAddress;
-public String architectOrCivilEngineerLicense;
-public String architectOrCivilEngineerDateIssued;
-public String architectOrCivilEngineerPlaceIssued;
-public String architectOrCivilEngineerTIN;
+public Boolean ;
+public Boolean ;
+public Boolean ;
+public String ;
 
-public String applicantName;
-public String applicantAddress;
-public String applicantCTC;
-public LocalDate applicantCTCDateIssued;
-public String applicantCTCPlaceIssued;
+public String ;
+public LocalDate ;
+public String ;
+public LocalDate ;
 
-public String architectOrCivilEngineerInChargeName;
-public String architectOrCivilEngineerInChargeAddress;
-public String architectOrCivilEngineerInChargeLicense;
-public String architectOrCivilEngineerInChargeDateIssued;
-public String architectOrCivilEngineerInChargePlaceIssued;
-public String architectOrCivilEngineerInChargeTIN;
+public String ;
+public LocalDate ;
+public String ;
+public LocalDate ;
 
-public String lotOwnerTCT;
-public String lotOwnerTaxDeclaration;
-public String lotOwnerName;
-public String lotOwnerAddress;
-public String lotOwnerCTC;
-public LocalDate lotOwnerCTCCTCDateIssued;
-public String lotOwnerCTCPlaceIssued;
+public String ;
+public String ;
+public String ;
+public LocalDate ;
