--- a/displaytabs/tabs/GovernmentUI/RealEstateElectricalPermitProfileBox3.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstateElectricalPermitProfileBox3.html
@@ -13,27 +13,27 @@
                     <div style="flex: 90%; margin: 5px;">
                         <label>Name</label>
                         <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount"/>
+                                name="buildingOwnerName"/>
                     </div>
                     <div style="flex: 90%; margin: 5px;">
                         <label>Address</label>
                         <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount"/>
+                                name="buildingOwnerAddress"/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>C.T.C. #</label>
                         <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount"/>
+                                name="buildingOwnerCTC"/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>Date Issued</label>
                         <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount"/>
+                                name="buildingOwnerCTCDateIssued"/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>Place Issued</label>
                         <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount"/>
+                                name="buildingOwnerCTCPlaceIssued"/>
                     </div>
                 </div>
             </div>
@@ -46,27 +46,27 @@
                     <div style="flex: 90%; margin: 5px;">
                         <label>Name</label>
                         <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount"/>
+                                name="lotOwnerName"/>
                     </div>
                     <div style="flex: 90%; margin: 5px;">
                         <label>Address</label>
                         <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount"/>
+                                name="lotOwnerAddress"/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>C.T.C. #</label>
                         <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount"/>
+                                name="lotOwnerCTC"/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>Date Issued</label>
                         <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount"/>
+                                name="lotOwnerCTCDateIssued"/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>Place Issued</label>
                         <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
-                                name="assessedAmount"/>
+                                name="lotOwnerCTCPlaceIssued"/>
                     </div>
                 </div>
             </div>
